# docdbpropagator

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  config_140_fields.yaml  config_60_fields.yaml  pyproject.toml  sample_config.yaml  setup.cfg
docdbpropagator/: collection_report_generator.py  config_validator.py  default_field_config.py  docdb_propagator.py  mongo_data_generator.py
examples/: config_140_fields.yaml  config_30_fields.yaml  config_60_fields.yaml  sample_config.yaml
schemas/: config_schema.json
scripts/: lint.py
tests/: test_config_validator.py  test_mongo_data_generator.py
