[tool.poetry]
name = "docdbpropagator"
version = "0.1.0"
description = ""
authors = ["Tomasz Ptak <tomasz@ptak.net.pl>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pymongo = "^4.11"
pyyaml = "^6.0.2"
jsonschema = "^4.23.0"

[tool.poetry.scripts]
generate = "docdbpropagator.docdb_propagator:main"
validate_config = "docdbpropagator.config_validator:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
